--- a/scaleup.ipynb
+++ b/scaleup.ipynb
@@ -1352,6 +1352,201 @@
     "    post_weeks=None,  # 如需限定 after=52 周，改为 52\n",
     ")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7668256d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# =========================\n",
+    "# Fast feature builder v3.1\n",
+    "# =========================\n",
+    "def build_feature_matrix_fast(\n",
+    "    change_r4w: pd.DataFrame,\n",
+    "    volume_r4w: pd.DataFrame,\n",
+    "    cutoff: str | pd.Timestamp,\n",
+    "    *,\n",
+    "    id_col=\"Account ID\",\n",
+    "    name_col_in_volume=\"account_name\",\n",
+    "    order_col=\"rolling_order\",\n",
+    "    firstb_col=\"first_b_stock_rw\",\n",
+    "    a_change_cols=(\"change_4w_a_ms\", \"change_4w_a_stock\", \"change_a_freq\"),\n",
+    "    b_change_cols=(\"change_4w_b_ms\", \"change_4w_b_stock\", \"change_b_freq\"),\n",
+    "    end_range_col=\"rolling_window_range_end\",\n",
+    "    before_lookback_orders=52,\n",
+    "    post_weeks: int | None = None,\n",
+    "):\n",
+    "    \"\"\"\n",
+    "    生成特征（含 before/after），并保证：\n",
+    "      - 仅使用窗口终点 <= cutoff 的行\n",
+    "      - before 段只统计首次买B之前最近 `before_lookback_orders` 个窗口\n",
+    "      - A侧 first_drop/rise 仅在 before-52 窗口内计算（🆕）\n",
+    "      - 输出包含 account_name\n",
+    "    \"\"\"\n",
+    "    df = change_r4w.copy()\n",
+    "\n",
+    "    # ---------- 0) 截止日期过滤 ----------\n",
+    "    if end_range_col not in df.columns:\n",
+    "        raise ValueError(f\"Column '{end_range_col}' not found in change_r4w.\")\n",
+    "    end_dates = pd.to_datetime(\n",
+    "        df[end_range_col].astype(str).str.split(\" to \").str[0],\n",
+    "        errors=\"coerce\"\n",
+    "    )\n",
+    "    cutoff = pd.to_datetime(cutoff)\n",
+    "    df = df.loc[end_dates.le(cutoff)].copy()\n",
+    "\n",
+    "    need_cols = [id_col, order_col, firstb_col, *a_change_cols, *b_change_cols]\n",
+    "    missing = [c for c in need_cols if c not in df.columns]\n",
+    "    if missing:\n",
+    "        raise ValueError(f\"Missing columns in change_r4w: {missing}\")\n",
+    "\n",
+    "    # ---------- 1) 相位标记 ----------\n",
+    "    df = df.sort_values([id_col, order_col]).copy()\n",
+    "    df[\"__before\"] = df[order_col] < df[firstb_col]\n",
+    "    df[\"__after\"]  = df[order_col] >= df[firstb_col]\n",
+    "\n",
+    "    # ---------- 2) ✏️ 截断 before 段为“first_B 之前最近 52 个窗口” ----------\n",
+    "    bounds = (\n",
+    "        df[[id_col, firstb_col]]\n",
+    "        .drop_duplicates(subset=[id_col])\n",
+    "        .assign(__lb=lambda x: (x[firstb_col] - before_lookback_orders).clip(lower=1))\n",
+    "        .rename(columns={firstb_col: \"__fb\"})\n",
+    "    )\n",
+    "    df = df.merge(bounds[[id_col, \"__lb\", \"__fb\"]], on=id_col, how=\"left\")\n",
+    "    mask_before52 = (df[order_col] >= df[\"__lb\"]) & (df[order_col] < df[\"__fb\"])\n",
+    "    df[\"__before\"] = df[\"__before\"] & mask_before52\n",
+    "\n",
+    "    # （可选）after 段限制长度\n",
+    "    if post_weeks is not None:\n",
+    "        df[\"__after\"] = df[\"__after\"] & (df[order_col] < (df[\"__fb\"] + post_weeks))\n",
+    "\n",
+    "    # ---------- 3) A 面：before/after 的计数 + volatility ----------\n",
+    "    out_parts = []\n",
+    "    g = df.groupby(id_col, group_keys=True)\n",
+    "\n",
+    "    def _phase_counts_and_vol(col: str, phase_col: str, phase_name: str) -> pd.DataFrame:\n",
+    "        vals = df[col].to_numpy()\n",
+    "        m = df[phase_col].to_numpy()\n",
+    "        phase_vals = np.where(m, vals, np.nan)\n",
+    "        tmp = df[[id_col]].copy()\n",
+    "        tmp[f\"__{col}_phase\"] = phase_vals\n",
+    "\n",
+    "        neg_ct = g.apply(lambda x: ((x[col] < 0) & x[phase_col]).sum()).rename(f\"{col}_neg_{phase_name}\")\n",
+    "        pos_ct = g.apply(lambda x: ((x[col] > 0) & x[phase_col]).sum()).rename(f\"{col}_pos_{phase_name}\")\n",
+    "        zer_ct = g.apply(lambda x: ((x[col] == 0) & x[phase_col]).sum()).rename(f\"{col}_no_change_{phase_name}\")\n",
+    "        vol    = tmp.groupby(id_col, as_index=True)[f\"__{col}_phase\"].std(ddof=1).rename(f\"{col}_volatility_{phase_name}\")\n",
+    "        return pd.concat([neg_ct, pos_ct, zer_ct, vol], axis=1)\n",
+    "\n",
+    "    for col in a_change_cols:\n",
+    "        out_parts.append(_phase_counts_and_vol(col, \"__before\", \"before\"))\n",
+    "        out_parts.append(_phase_counts_and_vol(col, \"__after\",  \"after\"))\n",
+    "\n",
+    "    df_change_features = pd.concat(out_parts, axis=1)\n",
+    "    df_change_features.index.name = id_col\n",
+    "    df_change_features = df_change_features.reset_index()\n",
+    "\n",
+    "    # ---------- 4) 🆕 A 侧 first_drop / first_rise：仅在 before-52 内计算 ----------\n",
+    "    df_before52 = df.loc[df[\"__before\"]].copy()  # 只取已截断的 before-52 窗口\n",
+    "    fr_a_parts = []\n",
+    "    for col in a_change_cols:\n",
+    "        drop_a = df_before52.loc[df_before52[col] < 0].groupby(id_col)[order_col].min().rename(f\"{col}_first_drop_order\")\n",
+    "        rise_a = df_before52.loc[df_before52[col] > 0].groupby(id_col)[order_col].min().rename(f\"{col}_first_rise_order\")\n",
+    "        fr_a_parts.extend([drop_a, rise_a])\n",
+    "    df_firsts_a = pd.concat(fr_a_parts, axis=1).reset_index() if fr_a_parts else pd.DataFrame({id_col: []})\n",
+    "\n",
+    "    # ---------- 5) B 侧 first_drop / first_rise（维持全时期 ≤cutoff 的口径） ----------\n",
+    "    fr_b_parts = []\n",
+    "    for col in b_change_cols:\n",
+    "        drop_b = df.loc[df[col] < 0].groupby(id_col)[order_col].min().rename(f\"{col}_first_drop_order\")\n",
+    "        rise_b = df.loc[df[col] > 0].groupby(id_col)[order_col].min().rename(f\"{col}_first_rise_order\")\n",
+    "        fr_b_parts.extend([drop_b, rise_b])\n",
+    "    df_firsts_b = pd.concat(fr_b_parts, axis=1).reset_index() if fr_b_parts else pd.DataFrame({id_col: []})\n",
+    "\n",
+    "    # 合并 A/B first_* 结果\n",
+    "    df_firsts = pd.merge(df_firsts_a, df_firsts_b, on=id_col, how=\"outer\")\n",
+    "\n",
+    "    # ---------- 6) B 面汇总（不分相位）：pos_count & volatility ----------\n",
+    "    b_parts = []\n",
+    "    for col in b_change_cols:\n",
+    "        pos_count = df.groupby(id_col)[col].apply(lambda s: (s > 0).sum()).rename(f\"{col}_pos_count\")\n",
+    "        vol = df.groupby(id_col)[col].std(ddof=1).rename(f\"{col}_volatility\")\n",
+    "        b_parts.append(pos_count)\n",
+    "        b_parts.append(vol)\n",
+    "    df_b_summary = pd.concat(b_parts, axis=1).reset_index()\n",
+    "\n",
+    "    # ---------- 7) 连续串（before: a_stock；after: a_ms） ----------\n",
+    "    def _count_consecutive_neg(x: pd.Series, k: int) -> int:\n",
+    "        arr = x.to_numpy()\n",
+    "        n, streak = 0, 0\n",
+    "        for v in arr:\n",
+    "            if pd.notna(v) and (v < 0):\n",
+    "                streak += 1\n",
+    "                if streak == k:\n",
+    "                    n += 1\n",
+    "                    streak -= 1  # allow overlapping\n",
+    "            else:\n",
+    "                streak = 0\n",
+    "        return n\n",
+    "\n",
+    "    def _streak_block(group: pd.DataFrame) -> pd.Series:\n",
+    "        out = {}\n",
+    "        g_before = group.loc[group[\"__before\"]]\n",
+    "        g_after  = group.loc[group[\"__after\"]]\n",
+    "        for K in (3, 4, 5):\n",
+    "            out[f\"a_stocking_{K}fall_before_b\"] = _count_consecutive_neg(g_before[\"change_4w_a_stock\"], K)\n",
+    "        for K in (3, 4, 5):\n",
+    "            out[f\"a_ms_{K}fall_after_b\"] = _count_consecutive_neg(g_after[\"change_4w_a_ms\"], K)\n",
+    "        return pd.Series(out)\n",
+    "\n",
+    "    df_streaks = df.groupby(id_col, as_index=False).apply(_streak_block).reset_index(drop=True)\n",
+    "\n",
+    "    # ---------- 8) 合并 ----------\n",
+    "    features = (\n",
+    "        df_change_features\n",
+    "        .merge(df_firsts,    on=id_col, how=\"left\")\n",
+    "        .merge(df_b_summary, on=id_col, how=\"left\")\n",
+    "        .merge(df_streaks,   on=id_col, how=\"left\")\n",
+    "    )\n",
+    "\n",
+    "    # ---------- 9) 合并账户名并放到第2列 ----------\n",
+    "    if name_col_in_volume in volume_r4w.columns:\n",
+    "        id_candidates = [c for c in volume_r4w.columns if c.lower() in (\"account id\", \"account_id\", \"id\")]\n",
+    "        if id_candidates:\n",
+    "            id_in_volume = id_candidates[0]\n",
+    "            names = volume_r4w[[id_in_volume, name_col_in_volume]].drop_duplicates()\n",
+    "            names = names.rename(columns={id_in_volume: id_col})\n",
+    "            features = features.merge(names, on=id_col, how=\"left\")\n",
+    "\n",
+    "    cols = features.columns.tolist()\n",
+    "    front = [id_col]\n",
+    "    if name_col_in_volume in cols:\n",
+    "        front.append(name_col_in_volume)\n",
+    "    rest = [c for c in cols if c not in front]\n",
+    "    features = features[front + rest]\n",
+    "\n",
+    "    return features\n",
+    "\n",
+    "\n",
+    "# =============================\n",
+    "# 便捷函数：一键生成 Train/Valid\n",
+    "# =============================\n",
+    "def build_train_valid_features(\n",
+    "    change_r4w: pd.DataFrame,\n",
+    "    volume_r4w: pd.DataFrame,\n",
+    "    *,\n",
+    "    cutoff_train=\"2025-08-29\",\n",
+    "    cutoff_valid=\"2025-10-03\",\n",
+    "    **kwargs\n",
+    "):\n",
+    "    feat_train = build_feature_matrix_fast(change_r4w, volume_r4w, cutoff_train, **kwargs)\n",
+    "    feat_valid = build_feature_matrix_fast(change_r4w, volume_r4w, cutoff_valid, **kwargs)\n",
+    "    return feat_train, feat_valid\n"
+   ]
   }
  ],
  "metadata": {
