--- a/scaleup.ipynb
+++ b/scaleup.ipynb
@@ -1364,7 +1364,7 @@
     "import numpy as np\n",
     "\n",
     "# =========================\n",
-    "# Fast feature builder v3.1\n",
+    "# Fast feature builder v3.3\n",
     "# =========================\n",
     "def build_feature_matrix_fast(\n",
     "    change_r4w: pd.DataFrame,\n",
@@ -1378,58 +1378,59 @@
     "    a_change_cols=(\"change_4w_a_ms\", \"change_4w_a_stock\", \"change_a_freq\"),\n",
     "    b_change_cols=(\"change_4w_b_ms\", \"change_4w_b_stock\", \"change_b_freq\"),\n",
     "    end_range_col=\"rolling_window_range_end\",\n",
-    "    before_lookback_orders=52,\n",
-    "    post_weeks: int | None = None,\n",
+    "    before_lookback_orders=52,     # 仅统计首次买B之前“最近52个窗口” / last 52 pre-B windows only\n",
+    "    post_weeks: int | None = None  # 可选：after段限制长度；None=不限 / optional cap after-B length\n",
     "):\n",
     "    \"\"\"\n",
-    "    生成特征（含 before/after），并保证：\n",
+    "    构建特征矩阵（before/after 拆分）并满足：\n",
     "      - 仅使用窗口终点 <= cutoff 的行\n",
-    "      - before 段只统计首次买B之前最近 `before_lookback_orders` 个窗口\n",
-    "      - A侧 first_drop/rise 仅在 before-52 窗口内计算（🆕）\n",
-    "      - 输出包含 account_name\n",
+    "      - before 段仅统计首次买B之前最近 `before_lookback_orders` 个窗口\n",
+    "      - A侧 first_drop/rise 使用 pre-B 52 窗“相对序号(1..52)”；未发生事件→NaN\n",
+    "      - B侧 first_* 维持全时期(≤cutoff)口径（如需 after-only 可另加开关）\n",
+    "      - 输出包含 account_name（来自 volume_r4w）\n",
     "    \"\"\"\n",
-    "    df = change_r4w.copy()\n",
     "\n",
-    "    # ---------- 0) 截止日期过滤 ----------\n",
+    "    # ---------- 0) 截止日期过滤 / cutoff filter ----------\n",
+    "    df = change_r4w.copy()\n",
     "    if end_range_col not in df.columns:\n",
     "        raise ValueError(f\"Column '{end_range_col}' not found in change_r4w.\")\n",
-    "    end_dates = pd.to_datetime(\n",
-    "        df[end_range_col].astype(str).str.split(\" to \").str[0],\n",
-    "        errors=\"coerce\"\n",
-    "    )\n",
+    "    end_dates = pd.to_datetime(df[end_range_col].astype(str).str.split(\" to \").str[0], errors=\"coerce\")\n",
     "    cutoff = pd.to_datetime(cutoff)\n",
     "    df = df.loc[end_dates.le(cutoff)].copy()\n",
     "\n",
+    "    # ---------- 1) 必要列检查 / sanity check ----------\n",
     "    need_cols = [id_col, order_col, firstb_col, *a_change_cols, *b_change_cols]\n",
-    "    missing = [c for c in need_cols if c not in df.columns]\n",
-    "    if missing:\n",
-    "        raise ValueError(f\"Missing columns in change_r4w: {missing}\")\n",
+    "    miss = [c for c in need_cols if c not in df.columns]\n",
+    "    if miss:\n",
+    "        raise ValueError(f\"Missing columns in change_r4w: {miss}\")\n",
     "\n",
-    "    # ---------- 1) 相位标记 ----------\n",
+    "    # ---------- 2) 相位标记 & before-52 截断 / phase masks & before-52 clamp ----------\n",
     "    df = df.sort_values([id_col, order_col]).copy()\n",
     "    df[\"__before\"] = df[order_col] < df[firstb_col]\n",
     "    df[\"__after\"]  = df[order_col] >= df[firstb_col]\n",
     "\n",
-    "    # ---------- 2) ✏️ 截断 before 段为“first_B 之前最近 52 个窗口” ----------\n",
     "    bounds = (\n",
     "        df[[id_col, firstb_col]]\n",
     "        .drop_duplicates(subset=[id_col])\n",
-    "        .assign(__lb=lambda x: (x[firstb_col] - before_lookback_orders).clip(lower=1))\n",
+    "        .assign(__lb=lambda x: (x[firstb_col] - before_lookback_orders).clip(lower=1))  # 左边界= max(1, fb-52)\n",
     "        .rename(columns={firstb_col: \"__fb\"})\n",
     "    )\n",
     "    df = df.merge(bounds[[id_col, \"__lb\", \"__fb\"]], on=id_col, how=\"left\")\n",
+    "\n",
+    "    # 仅保留 before 段的最近52窗口 / keep last 52 windows before first-B\n",
     "    mask_before52 = (df[order_col] >= df[\"__lb\"]) & (df[order_col] < df[\"__fb\"])\n",
     "    df[\"__before\"] = df[\"__before\"] & mask_before52\n",
     "\n",
-    "    # （可选）after 段限制长度\n",
+    "    # 可选：限制 after 段长度 / optional after cap (e.g., 52)\n",
     "    if post_weeks is not None:\n",
     "        df[\"__after\"] = df[\"__after\"] & (df[order_col] < (df[\"__fb\"] + post_weeks))\n",
     "\n",
-    "    # ---------- 3) A 面：before/after 的计数 + volatility ----------\n",
+    "    # ---------- 3) A面计数与波动（before/after）/ A-side counts & volatility ----------\n",
     "    out_parts = []\n",
     "    g = df.groupby(id_col, group_keys=True)\n",
     "\n",
     "    def _phase_counts_and_vol(col: str, phase_col: str, phase_name: str) -> pd.DataFrame:\n",
+    "        # 用 NaN 屏蔽非该相位行；groupby.std 会忽略 NaN\n",
     "        vals = df[col].to_numpy()\n",
     "        m = df[phase_col].to_numpy()\n",
     "        phase_vals = np.where(m, vals, np.nan)\n",
@@ -1450,16 +1451,38 @@
     "    df_change_features.index.name = id_col\n",
     "    df_change_features = df_change_features.reset_index()\n",
     "\n",
-    "    # ---------- 4) 🆕 A 侧 first_drop / first_rise：仅在 before-52 内计算 ----------\n",
-    "    df_before52 = df.loc[df[\"__before\"]].copy()  # 只取已截断的 before-52 窗口\n",
-    "    fr_a_parts = []\n",
-    "    for col in a_change_cols:\n",
-    "        drop_a = df_before52.loc[df_before52[col] < 0].groupby(id_col)[order_col].min().rename(f\"{col}_first_drop_order\")\n",
-    "        rise_a = df_before52.loc[df_before52[col] > 0].groupby(id_col)[order_col].min().rename(f\"{col}_first_rise_order\")\n",
-    "        fr_a_parts.extend([drop_a, rise_a])\n",
-    "    df_firsts_a = pd.concat(fr_a_parts, axis=1).reset_index() if fr_a_parts else pd.DataFrame({id_col: []})\n",
+    "    # ---------- 4) A侧 first_*（相对序号1..52 + 保留全局序号便于审计） ----------\n",
+    "    df_before52 = df.loc[df[\"__before\"]].copy()\n",
+    "    # 相对序号：relative_order = rolling_order - __lb + 1 ∈ [1..52]\n",
+    "    df_before52[\"__rel_order\"] = (df_before52[order_col] - df_before52[\"__lb\"] + 1).astype(\"Int64\")\n",
     "\n",
-    "    # ---------- 5) B 侧 first_drop / first_rise（维持全时期 ≤cutoff 的口径） ----------\n",
+    "    fr_a_rel, fr_a_glb = [], []\n",
+    "    for col in a_change_cols:\n",
+    "        # 相对序号（未发生事件=NaN）\n",
+    "        drop_rel = (df_before52.loc[df_before52[col] < 0]\n",
+    "                    .groupby(id_col)[\"__rel_order\"].min()\n",
+    "                    .rename(f\"{col}_first_drop_order\"))\n",
+    "        rise_rel = (df_before52.loc[df_before52[col] > 0]\n",
+    "                    .groupby(id_col)[\"__rel_order\"].min()\n",
+    "                    .rename(f\"{col}_first_rise_order\"))\n",
+    "        fr_a_rel.extend([drop_rel, rise_rel])\n",
+    "\n",
+    "        # 全局序号（≤cutoff；便于稽核）\n",
+    "        drop_glb = (df_before52.loc[df_before52[col] < 0]\n",
+    "                    .groupby(id_col)[order_col].min()\n",
+    "                    .rename(f\"{col}_first_drop_order_global\"))\n",
+    "        rise_glb = (df_before52.loc[df_before52[col] > 0]\n",
+    "                    .groupby(id_col)[order_col].min()\n",
+    "                    .rename(f\"{col}_first_rise_order_global\"))\n",
+    "        fr_a_glb.extend([drop_glb, rise_glb])\n",
+    "\n",
+    "    df_firsts_a = pd.merge(\n",
+    "        pd.concat(fr_a_rel, axis=1).reset_index() if fr_a_rel else pd.DataFrame({id_col: []}),\n",
+    "        pd.concat(fr_a_glb, axis=1).reset_index() if fr_a_glb else pd.DataFrame({id_col: []}),\n",
+    "        on=id_col, how=\"outer\"\n",
+    "    )\n",
+    "\n",
+    "    # ---------- 5) B侧 first_*（维持全时期 ≤cutoff 的口径） ----------\n",
     "    fr_b_parts = []\n",
     "    for col in b_change_cols:\n",
     "        drop_b = df.loc[df[col] < 0].groupby(id_col)[order_col].min().rename(f\"{col}_first_drop_order\")\n",
@@ -1467,19 +1490,15 @@
     "        fr_b_parts.extend([drop_b, rise_b])\n",
     "    df_firsts_b = pd.concat(fr_b_parts, axis=1).reset_index() if fr_b_parts else pd.DataFrame({id_col: []})\n",
     "\n",
-    "    # 合并 A/B first_* 结果\n",
-    "    df_firsts = pd.merge(df_firsts_a, df_firsts_b, on=id_col, how=\"outer\")\n",
-    "\n",
-    "    # ---------- 6) B 面汇总（不分相位）：pos_count & volatility ----------\n",
+    "    # ---------- 6) B面汇总（不分相位）/ B-side summary ----------\n",
     "    b_parts = []\n",
     "    for col in b_change_cols:\n",
     "        pos_count = df.groupby(id_col)[col].apply(lambda s: (s > 0).sum()).rename(f\"{col}_pos_count\")\n",
     "        vol = df.groupby(id_col)[col].std(ddof=1).rename(f\"{col}_volatility\")\n",
-    "        b_parts.append(pos_count)\n",
-    "        b_parts.append(vol)\n",
+    "        b_parts.append(pos_count); b_parts.append(vol)\n",
     "    df_b_summary = pd.concat(b_parts, axis=1).reset_index()\n",
     "\n",
-    "    # ---------- 7) 连续串（before: a_stock；after: a_ms） ----------\n",
+    "    # ---------- 7) 连续串（before: a_stock；after: a_ms） / streaks ----------\n",
     "    def _count_consecutive_neg(x: pd.Series, k: int) -> int:\n",
     "        arr = x.to_numpy()\n",
     "        n, streak = 0, 0\n",
@@ -1493,33 +1512,33 @@
     "                streak = 0\n",
     "        return n\n",
     "\n",
-    "    def _streak_block(group: pd.DataFrame) -> pd.Series:\n",
+    "    def _streak_block(gdf: pd.DataFrame) -> pd.Series:\n",
     "        out = {}\n",
-    "        g_before = group.loc[group[\"__before\"]]\n",
-    "        g_after  = group.loc[group[\"__after\"]]\n",
+    "        gbef = gdf.loc[gdf[\"__before\"]]\n",
+    "        gaft = gdf.loc[gdf[\"__after\"]]\n",
     "        for K in (3, 4, 5):\n",
-    "            out[f\"a_stocking_{K}fall_before_b\"] = _count_consecutive_neg(g_before[\"change_4w_a_stock\"], K)\n",
+    "            out[f\"a_stocking_{K}fall_before_b\"] = _count_consecutive_neg(gbef[\"change_4w_a_stock\"], K)\n",
     "        for K in (3, 4, 5):\n",
-    "            out[f\"a_ms_{K}fall_after_b\"] = _count_consecutive_neg(g_after[\"change_4w_a_ms\"], K)\n",
+    "            out[f\"a_ms_{K}fall_after_b\"] = _count_consecutive_neg(gaft[\"change_4w_a_ms\"], K)\n",
     "        return pd.Series(out)\n",
     "\n",
     "    df_streaks = df.groupby(id_col, as_index=False).apply(_streak_block).reset_index(drop=True)\n",
     "\n",
-    "    # ---------- 8) 合并 ----------\n",
+    "    # ---------- 8) 合并特征 / assemble ----------\n",
     "    features = (\n",
     "        df_change_features\n",
-    "        .merge(df_firsts,    on=id_col, how=\"left\")\n",
+    "        .merge(df_firsts_a,  on=id_col, how=\"left\")\n",
+    "        .merge(df_firsts_b,  on=id_col, how=\"left\")\n",
     "        .merge(df_b_summary, on=id_col, how=\"left\")\n",
     "        .merge(df_streaks,   on=id_col, how=\"left\")\n",
     "    )\n",
     "\n",
-    "    # ---------- 9) 合并账户名并放到第2列 ----------\n",
+    "    # ---------- 9) 追加账户名并放到第2列 / attach account_name ----------\n",
     "    if name_col_in_volume in volume_r4w.columns:\n",
     "        id_candidates = [c for c in volume_r4w.columns if c.lower() in (\"account id\", \"account_id\", \"id\")]\n",
     "        if id_candidates:\n",
     "            id_in_volume = id_candidates[0]\n",
-    "            names = volume_r4w[[id_in_volume, name_col_in_volume]].drop_duplicates()\n",
-    "            names = names.rename(columns={id_in_volume: id_col})\n",
+    "            names = volume_r4w[[id_in_volume, name_col_in_volume]].drop_duplicates().rename(columns={id_in_volume: id_col})\n",
     "            features = features.merge(names, on=id_col, how=\"left\")\n",
     "\n",
     "    cols = features.columns.tolist()\n",
@@ -1533,7 +1552,7 @@
     "\n",
     "\n",
     "# =============================\n",
-    "# 便捷函数：一键生成 Train/Valid\n",
+    "# Train / Valid 便捷构建\n",
     "# =============================\n",
     "def build_train_valid_features(\n",
     "    change_r4w: pd.DataFrame,\n",
