--- a/scaleup.ipynb
+++ b/scaleup.ipynb
@@ -1566,6 +1566,278 @@
     "    feat_valid = build_feature_matrix_fast(change_r4w, volume_r4w, cutoff_valid, **kwargs)\n",
     "    return feat_train, feat_valid\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3e7d6478",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>store_id</th>\n",
+       "      <th>week_id</th>\n",
+       "      <th>a_stocking</th>\n",
+       "      <th>b_stocking</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20230804</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20230811</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20230818</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20230825</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20230901</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   store_id   week_id  a_stocking  b_stocking\n",
+       "0         1  20230804           1           0\n",
+       "1         1  20230811           1           1\n",
+       "2         1  20230818           1           0\n",
+       "3         1  20230825           1           0\n",
+       "4         1  20230901           1           0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# -----------------------\n",
+    "# 参数设置\n",
+    "# -----------------------\n",
+    "N_STORES = 35000\n",
+    "START_DATE_STR = \"2023-08-01\"\n",
+    "TODAY = pd.Timestamp.today().normalize()\n",
+    "\n",
+    "# -----------------------\n",
+    "# 生成周五对齐的 week_id 序列\n",
+    "# -----------------------\n",
+    "start_date = pd.to_datetime(START_DATE_STR)\n",
+    "\n",
+    "# 找到 start_date 之后的第一个周五\n",
+    "offset_days = (4 - start_date.weekday()) % 7   # 4 = Friday\n",
+    "first_friday = start_date + pd.Timedelta(days=offset_days)\n",
+    "\n",
+    "# 找到今天之前最近的一个周五\n",
+    "last_friday_offset = (TODAY.weekday() - 4) % 7\n",
+    "last_friday = TODAY - pd.Timedelta(days=last_friday_offset)\n",
+    "\n",
+    "# 所有周五\n",
+    "week_dates = pd.date_range(start=first_friday, end=last_friday, freq=\"W-FRI\")\n",
+    "\n",
+    "# -----------------------\n",
+    "# store_id × week_id 笛卡尔积\n",
+    "# -----------------------\n",
+    "store_ids = np.arange(1, N_STORES + 1)\n",
+    "mi = pd.MultiIndex.from_product(\n",
+    "    [store_ids, week_dates],\n",
+    "    names=[\"store_id\", \"week_date\"]\n",
+    ")\n",
+    "df = mi.to_frame(index=False)\n",
+    "\n",
+    "# 转成 int week_id（如 20230804）\n",
+    "df[\"week_id\"] = df[\"week_date\"].dt.strftime(\"%Y%m%d\").astype(int)\n",
+    "\n",
+    "# -----------------------\n",
+    "# 模拟 A / B stocking\n",
+    "# -----------------------\n",
+    "n_weeks = len(week_dates)\n",
+    "df[\"week_idx\"] = df[\"week_date\"].rank(method=\"dense\").astype(int) - 1\n",
+    "\n",
+    "t = df[\"week_idx\"].astype(float)\n",
+    "\n",
+    "# B 从 5% → 40%\n",
+    "p_b_start, p_b_end = 0.05, 0.40\n",
+    "# A 从 95% → 60%\n",
+    "p_a_start, p_a_end = 0.95, 0.60\n",
+    "\n",
+    "frac = t / (n_weeks - 1) if n_weeks > 1 else 0\n",
+    "\n",
+    "p_b = p_b_start + (p_b_end - p_b_start) * frac\n",
+    "p_a = p_a_start + (p_a_end - p_a_start) * frac\n",
+    "\n",
+    "# 让 A / B 有一点“互斥”\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "b_stocking = np.random.binomial(1, p_b)\n",
+    "p_a_adj = p_a * np.where(b_stocking == 1, 0.7, 1.0)\n",
+    "p_a_adj = np.clip(p_a_adj, 0, 1)\n",
+    "a_stocking = np.random.binomial(1, p_a_adj)\n",
+    "\n",
+    "df[\"a_stocking\"] = a_stocking\n",
+    "df[\"b_stocking\"] = b_stocking\n",
+    "\n",
+    "# 输出最终 df\n",
+    "df_out = df[[\"store_id\", \"week_id\", \"a_stocking\", \"b_stocking\"]].copy()\n",
+    "\n",
+    "df_out.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ad77657",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DOI V2 #\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy.optimize import curve_fit\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "def sigmoid(t, L, k, t0, b):\n",
+    "    # 带 baseline 的 sigmoid，更贴近真实 share（不强迫从0开始）\n",
+    "    return b + L / (1.0 + np.exp(-k * (t - t0)))\n",
+    "\n",
+    "def first_sigmoid_to_account_refined(\n",
+    "    df,\n",
+    "    id_col=\"account_id\",\n",
+    "    order_col=\"rolling_order\",\n",
+    "    y_col=\"b_r4w_ms\",\n",
+    "    min_points=10,\n",
+    "    near_zero_cut=0.01,\n",
+    "    r2_cut=0.85,\n",
+    "    sustain_window=3,      # t0 后连续几期验证\n",
+    "    maxfev=20000,\n",
+    "):\n",
+    "    d = df[[id_col, order_col, y_col]].copy()\n",
+    "    d = d.dropna(subset=[id_col, order_col, y_col])\n",
+    "    d[order_col] = pd.to_numeric(d[order_col], errors=\"coerce\")\n",
+    "    d[y_col] = pd.to_numeric(d[y_col], errors=\"coerce\")\n",
+    "    d = d.dropna(subset=[order_col, y_col])\n",
+    "\n",
+    "    # share 通常在 [0,1]，先 clip 让拟合稳定（也能防止异常值）\n",
+    "    d[y_col] = d[y_col].clip(0, 1)\n",
+    "\n",
+    "    results = []\n",
+    "\n",
+    "    for acc, g in d.groupby(id_col, sort=False):\n",
+    "        g = g.sort_values(order_col)\n",
+    "        y = g[y_col].to_numpy(dtype=float)\n",
+    "\n",
+    "        if len(y) < min_points:\n",
+    "            continue\n",
+    "        if np.all(y < near_zero_cut):\n",
+    "            continue\n",
+    "        if np.nanstd(y) < 1e-6:\n",
+    "            continue\n",
+    "\n",
+    "        # 用真实 rolling_order 做 t（更合理）\n",
+    "        t = g[order_col].to_numpy(dtype=float)\n",
+    "\n",
+    "        # 初值\n",
+    "        y_min, y_max = float(np.min(y)), float(np.max(y))\n",
+    "        L0 = max(y_max - y_min, 1e-3)\n",
+    "        b0 = y_min\n",
+    "        k0 = 1.0\n",
+    "        t0_0 = float(np.median(t))\n",
+    "\n",
+    "        # bounds：L>=0, t0在范围内, b在[0,1], k 控制在合理范围\n",
+    "        t_min, t_max = float(np.min(t)), float(np.max(t))\n",
+    "        bounds = (\n",
+    "            [0.0, -20.0, t_min, 0.0],\n",
+    "            [1.5,  20.0, t_max, 1.0]\n",
+    "        )\n",
+    "\n",
+    "        try:\n",
+    "            popt, _ = curve_fit(\n",
+    "                sigmoid, t, y,\n",
+    "                p0=[L0, k0, t0_0, b0],\n",
+    "                bounds=bounds,\n",
+    "                maxfev=maxfev\n",
+    "            )\n",
+    "\n",
+    "            y_pred = sigmoid(t, *popt)\n",
+    "            r2 = float(r2_score(y, y_pred))\n",
+    "\n",
+    "            L, k, t0, b = popt\n",
+    "\n",
+    "            # 可解释：t0对应的拟合share\n",
+    "            y_tipping = float(sigmoid(t0, *popt))\n",
+    "\n",
+    "            # 持续性验证：看 t0 后 sustain_window 个点的均值是否显著更高\n",
+    "            # 简单做法：找到最接近 t0 的索引\n",
+    "            idx0 = int(np.argmin(np.abs(t - t0)))\n",
+    "            pre = y[:max(idx0, 1)]\n",
+    "            post = y[idx0: idx0 + sustain_window]\n",
+    "\n",
+    "            sustain_ok = (len(pre) >= 3) and (len(post) >= sustain_window) and (np.mean(post) > np.mean(pre) + 0.02)\n",
+    "\n",
+    "            results.append({\n",
+    "                id_col: acc,\n",
+    "                \"L\": float(L),\n",
+    "                \"k\": float(k),\n",
+    "                \"t0\": float(t0),\n",
+    "                \"b\": float(b),\n",
+    "                \"r2\": round(r2, 3),\n",
+    "                \"y_tipping\": round(y_tipping, 3),\n",
+    "                \"is_increasing\": bool((k > 0) and (r2 >= r2_cut)),\n",
+    "                \"sustain_ok\": bool(sustain_ok),\n",
+    "                \"is_valid_tip\": bool((k > 0) and (r2 >= r2_cut) and sustain_ok),\n",
+    "            })\n",
+    "\n",
+    "        except Exception:\n",
+    "            continue\n",
+    "\n",
+    "    return pd.DataFrame(results)\n"
+   ]
   }
  ],
  "metadata": {
